# Rising_Sun

./: .dockerignore  .gitattributes  .gitignore  BUILDING.md  Dockerfile  README.md  docker-compose.yml  launcher.py  pyi_rth_torch_cpu.py  pyproject.toml  rising_sun.spec
.github/agents/: coder.agent.md  orchestrator.agent.md  planner.agent.md  reviewer.agent.md
.github/workflows/: build-standalone.yml
config/: idoc_application_template.yml
deploy/: Caddyfile
output/trocr_model_v3b/: config.json  generation_config.json  model.safetensors
packaging/windows/: RisingSun.iss
scripts/: batch_eval_idoc.py  build_standalone.sh  eval_live_pipeline.py  eval_new_types.py  gen_combined_training_data.py  gen_idoc_number_training_data.py  gen_rso_training_data.py  hp_sweep_names.py  kfold_cv_trocr_v2.py  sweep_rso_configs.py  train_idoc_number_ocr.py  train_rso_model.py  train_trocr_v2.py
src/rising_sun/: calibration.py  classification.py  cli.py  config_loader.py  extractor.py  ground_truth.py  identity.py  idoc_lookup.py  idoc_resolution.py  image_ops.py  jotform_parser.py  models.py  name_ocr.py  ocr.py  pdf.py  review.py  rising_sun_packet.py  rso_detector.py  train_name_ocr.py
tests/: test_idoc_resolution.py
web/backend/: main.py
web/frontend/: index.html
web/frontend/src/: App.jsx
web/frontend/src/components/: FieldCard.jsx  PageOverlay.jsx  ResultView.jsx  UploadView.jsx
